# project-euler

./: .gitignore  README.md  pyproject.toml  scratch.ipynb
problems/: 1.ipynb  2.ipynb  3.ipynb
src/project_euler/: __init__.py  _utils.py
